--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -199,7 +199,7 @@
     "tags": []
    },
    "source": [
-    "<button onclick=\"myFunction()\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
+    "<button onclick=\"myFunction1()\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
     "\n",
     "<div id=\"myDIV\" style=\"display:none\">\n",
     "    \n",
@@ -226,23 +226,12 @@
     "     4. das Ergebnis auf maximal 60 Zeichen kürzen (damit Dateinamen handlich bleiben).\n",
     "   * Falls nach allen Filterungen nichts übrig ist, liefert die Funktion sicherheitshalber den Platzhalter **„untitled“** zurück.\n",
     "\n",
-    "</div>\n",
-    "\n",
-    "<script>\n",
-    "function myFunction() {\n",
-    "  var x = document.getElementById(\"myDIV\");\n",
-    "  if (x.style.display === \"none\") {\n",
-    "    x.style.display = \"block\";\n",
-    "  } else {\n",
-    "    x.style.display = \"none\";\n",
-    "  }\n",
-    "}\n",
-    "</script>"
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "577fdf92-4f28-4a8a-8dfa-5c607098d6a9",
    "metadata": {
     "editable": true,
@@ -265,7 +254,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Rows: 100%|█████████████████████████████████████| 10/10 [00:05<00:00,  1.73it/s]\n"
+      "Rows: 100%|█████████████████████████████████████| 10/10 [00:06<00:00,  1.50it/s]\n"
      ]
     },
     {
@@ -301,53 +290,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>16.06.2025</td>\n",
-       "      <td>Senatsverwaltung für Wirtschaft, Energie und B...</td>\n",
-       "      <td>Berlin stellt neues Esport-Nachwuchsteam vor –...</td>\n",
-       "      <td>https://www.berlin.de/sen/web/presse/pressemit...</td>\n",
-       "      <td>1570469.html</td>\n",
-       "      <td>1570469.txt</td>\n",
-       "      <td>933</td>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Bezirksamt Spandau</td>\n",
+       "      <td>Fête de la musique – Musikmeile in der Spandau...</td>\n",
+       "      <td>https://www.berlin.de/ba-spandau/aktuelles/pre...</td>\n",
+       "      <td>1570741.html</td>\n",
+       "      <td>1570741.txt</td>\n",
+       "      <td>807</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>16.06.2025</td>\n",
-       "      <td>Bezirksamt Spandau</td>\n",
-       "      <td>Drei Sprachen, ein Tag: Dein Tor zum Norden</td>\n",
-       "      <td>https://www.berlin.de/ba-spandau/aktuelles/pre...</td>\n",
-       "      <td>1570459.html</td>\n",
-       "      <td>1570459.txt</td>\n",
-       "      <td>754</td>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Bezirksamt Marzahn-Hellersdorf</td>\n",
+       "      <td>Hitzeschutz für wohnungs- und obdachlose Mensc...</td>\n",
+       "      <td>https://www.berlin.de/ba-marzahn-hellersdorf/a...</td>\n",
+       "      <td>1570731.html</td>\n",
+       "      <td>1570731.txt</td>\n",
+       "      <td>848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>16.06.2025</td>\n",
-       "      <td>Bezirksamt Spandau</td>\n",
-       "      <td>Schnupperkurs Qi Gong in der Stadtbibliothek S...</td>\n",
-       "      <td>https://www.berlin.de/ba-spandau/aktuelles/pre...</td>\n",
-       "      <td>1570455.html</td>\n",
-       "      <td>1570455.txt</td>\n",
-       "      <td>658</td>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Bezirksamt Marzahn-Hellersdorf</td>\n",
+       "      <td>Fantasy bei Mark Twain: Lisanne Surborg liest ...</td>\n",
+       "      <td>https://www.berlin.de/ba-marzahn-hellersdorf/a...</td>\n",
+       "      <td>1570716.html</td>\n",
+       "      <td>1570716.txt</td>\n",
+       "      <td>692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>16.06.2025</td>\n",
-       "      <td>Bezirksamt Spandau</td>\n",
-       "      <td>Digitaltag 2025: Digitalisierung von Archivbes...</td>\n",
-       "      <td>https://www.berlin.de/ba-spandau/aktuelles/pre...</td>\n",
-       "      <td>1570447.html</td>\n",
-       "      <td>1570447.txt</td>\n",
-       "      <td>704</td>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Bezirksamt Mitte</td>\n",
+       "      <td>Öffentlichkeitsbeteiligung zu Kiezblocks im Be...</td>\n",
+       "      <td>https://www.berlin.de/ba-mitte/aktuelles/press...</td>\n",
+       "      <td>1570717.html</td>\n",
+       "      <td>1570717.txt</td>\n",
+       "      <td>939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>16.06.2025</td>\n",
-       "      <td>Bezirksamt Treptow-Köpenick</td>\n",
-       "      <td>Kunst am Bau: Entscheidung im Kunstwettbewerb ...</td>\n",
-       "      <td>https://www.berlin.de/ba-treptow-koepenick/akt...</td>\n",
-       "      <td>1570440.html</td>\n",
-       "      <td>1570440.txt</td>\n",
-       "      <td>1008</td>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Presse- und Informationsamt des Landes Berlin(...</td>\n",
+       "      <td>Fortschreibung von Lärmaktionsplan und Luftrei...</td>\n",
+       "      <td>https://www.berlin.de/rbmskzl/aktuelles/presse...</td>\n",
+       "      <td>1570638.html</td>\n",
+       "      <td>1570638.txt</td>\n",
+       "      <td>933</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -355,35 +344,35 @@
       ],
       "text/plain": [
        "         date                                            ressort  \\\n",
-       "0  16.06.2025  Senatsverwaltung für Wirtschaft, Energie und B...   \n",
-       "1  16.06.2025                                 Bezirksamt Spandau   \n",
-       "2  16.06.2025                                 Bezirksamt Spandau   \n",
-       "3  16.06.2025                                 Bezirksamt Spandau   \n",
-       "4  16.06.2025                        Bezirksamt Treptow-Köpenick   \n",
+       "0  17.06.2025                                 Bezirksamt Spandau   \n",
+       "1  17.06.2025                     Bezirksamt Marzahn-Hellersdorf   \n",
+       "2  17.06.2025                     Bezirksamt Marzahn-Hellersdorf   \n",
+       "3  17.06.2025                                   Bezirksamt Mitte   \n",
+       "4  17.06.2025  Presse- und Informationsamt des Landes Berlin(...   \n",
        "\n",
        "                                               title  \\\n",
-       "0  Berlin stellt neues Esport-Nachwuchsteam vor –...   \n",
-       "1        Drei Sprachen, ein Tag: Dein Tor zum Norden   \n",
-       "2  Schnupperkurs Qi Gong in der Stadtbibliothek S...   \n",
-       "3  Digitaltag 2025: Digitalisierung von Archivbes...   \n",
-       "4  Kunst am Bau: Entscheidung im Kunstwettbewerb ...   \n",
+       "0  Fête de la musique – Musikmeile in der Spandau...   \n",
+       "1  Hitzeschutz für wohnungs- und obdachlose Mensc...   \n",
+       "2  Fantasy bei Mark Twain: Lisanne Surborg liest ...   \n",
+       "3  Öffentlichkeitsbeteiligung zu Kiezblocks im Be...   \n",
+       "4  Fortschreibung von Lärmaktionsplan und Luftrei...   \n",
        "\n",
        "                                              pr_url filename_html  \\\n",
-       "0  https://www.berlin.de/sen/web/presse/pressemit...  1570469.html   \n",
-       "1  https://www.berlin.de/ba-spandau/aktuelles/pre...  1570459.html   \n",
-       "2  https://www.berlin.de/ba-spandau/aktuelles/pre...  1570455.html   \n",
-       "3  https://www.berlin.de/ba-spandau/aktuelles/pre...  1570447.html   \n",
-       "4  https://www.berlin.de/ba-treptow-koepenick/akt...  1570440.html   \n",
+       "0  https://www.berlin.de/ba-spandau/aktuelles/pre...  1570741.html   \n",
+       "1  https://www.berlin.de/ba-marzahn-hellersdorf/a...  1570731.html   \n",
+       "2  https://www.berlin.de/ba-marzahn-hellersdorf/a...  1570716.html   \n",
+       "3  https://www.berlin.de/ba-mitte/aktuelles/press...  1570717.html   \n",
+       "4  https://www.berlin.de/rbmskzl/aktuelles/presse...  1570638.html   \n",
        "\n",
        "  filename_txt  n_tokens  \n",
-       "0  1570469.txt       933  \n",
-       "1  1570459.txt       754  \n",
-       "2  1570455.txt       658  \n",
-       "3  1570447.txt       704  \n",
-       "4  1570440.txt      1008  "
+       "0  1570741.txt       807  \n",
+       "1  1570731.txt       848  \n",
+       "2  1570716.txt       692  \n",
+       "3  1570717.txt       939  \n",
+       "4  1570638.txt       933  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +456,7 @@
     "tags": []
    },
    "source": [
-    "<button onclick=\"myFunction()\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
+    "<button onclick=\"myFunction2()\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
     "\n",
     "<div id=\"myDIV2\" style=\"display:none\">\n",
     "\n",
@@ -636,7 +625,17 @@
     "</div>\n",
     "\n",
     "<script>\n",
-    "function myFunction() {\n",
+    "\n",
+    "function myFunction1() {\n",
+    "  var x = document.getElementById(\"myDIV\");\n",
+    "  if (x.style.display === \"none\") {\n",
+    "    x.style.display = \"block\";\n",
+    "  } else {\n",
+    "    x.style.display = \"none\";\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function myFunction2() {\n",
     "  var x = document.getElementById(\"myDIV2\");\n",
     "  if (x.style.display === \"none\") {\n",
     "    x.style.display = \"block\";\n",
@@ -650,14 +649,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36386c94-1263-49a0-9d1b-f7f0e09f1f4a",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "id": "98dc5641-30a4-4218-9749-e834f67b8cb0",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
