--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -134,9 +134,7 @@
     "slideshow": {
      "slide_type": ""
     },
-    "tags": [
-     "skip-execution"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -144,7 +142,7 @@
     "FIRST_OUTPUT_PAGE = (\n",
     "    \"https://www.berlin.de/presse/pressemitteilungen/index/search/?searchtext=&boolean=0&startdate=&enddate=&alle-senatsverwaltungen=on&institutions%5B%5D=Presse-+und+Informationsamt+des+Landes+Berlin&institutions%5B%5D=Senatsverwaltung+für+Bildung%2C+Jugend+und+Familie&institutions%5B%5D=Senatsverwaltung+für+Finanzen&institutions%5B%5D=Senatsverwaltung+für+Inneres+und+Sport&institutions%5B%5D=Senatsverwaltung+für+Arbeit%2C+Soziales%2C+Gleichstellung%2C+Integration%2C+Vielfalt+und+Antidiskriminierung&institutions%5B%5D=Senatsverwaltung+für+Justiz+und+Verbraucherschutz&institutions%5B%5D=Senatsverwaltung+für+Kultur+und+Gesellschaftlichen+Zusammenhalt&institutions%5B%5D=Senatsverwaltung+für+Stadtentwicklung%2C+Bauen+und+Wohnen&institutions%5B%5D=Senatsverwaltung+für+Mobilität%2C+Verkehr%2C+Klimaschutz+und+Umwelt&institutions%5B%5D=Senatsverwaltung+für+Wirtschaft%2C+Energie+und+Betriebe&institutions%5B%5D=Senatsverwaltung+für+Wissenschaft%2C+Gesundheit+und+Pflege&alle-bezirksamt=on&institutions%5B%5D=Bezirksamt+Charlottenburg-Wilmersdorf&institutions%5B%5D=Bezirksamt+Friedrichshain-Kreuzberg&institutions%5B%5D=Bezirksamt+Lichtenberg&institutions%5B%5D=Bezirksamt+Marzahn-Hellersdorf&institutions%5B%5D=Bezirksamt+Mitte&institutions%5B%5D=Bezirksamt+Neukölln&institutions%5B%5D=Bezirksamt+Pankow&institutions%5B%5D=Bezirksamt+Reinickendorf&institutions%5B%5D=Bezirksamt+Spandau&institutions%5B%5D=Bezirksamt+Steglitz-Zehlendorf&institutions%5B%5D=Bezirksamt+Tempelhof-Schöneberg&institutions%5B%5D=Bezirksamt+Treptow-Köpenick&alle-landesbeauftragte=on&institutions%5B%5D=Beauftragte+des+Senats+für+Integration+und+Migration&institutions%5B%5D=Beauftragter+zur+Aufarbeitung+der+SED-Diktatur&institutions%5B%5D=Bürger-+und+Polizeibeauftragter+des+Landes+Berlin&institutions%5B%5D=Pflegebeauftragte+des+Landes+Berlin&institutions%5B%5D=Landestierschutzbeauftragte&institutions%5B%5D=Landeswahlleitung&bt=\"\n",
     ") \n",
-    "DATA_DIR   = pathlib.Path(\"../data-updated\")          # keep same root as repo\n",
+    "DATA_DIR   = pathlib.Path(\"../data\")         \n",
     "HTML_DIR   = DATA_DIR / \"html\"\n",
     "TXT_DIR    = DATA_DIR / \"txt\"\n",
     "HTML_DIR.mkdir(parents=True, exist_ok=True)\n",
@@ -338,9 +336,9 @@
     ]
    },
    "source": [
-    "<!-- <button onclick=\"toggleDisplay('myDIV2')\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
+    "<button onclick=\"toggleDisplay('myDIV2')\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
     "\n",
-    "<div id=\"myDIV2\" style=\"display:none\"> -->\n",
+    "<div id=\"myDIV2\" style=\"display:none\"> \n",
     "\n",
     "### Was passiert in diesem Codeblock oben? – Schritt für Schritt\n",
     "\n",
@@ -504,7 +502,7 @@
     "HTML-Tabelle parst**, die Detailseiten herunterlädt, Text extrahiert und alles\n",
     "sauber für weitere Analysen ablegt.\n",
     "\n",
-    "<!-- </div> -->\n"
+    "</div> \n"
    ]
   },
   {
