--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -336,9 +336,9 @@
     ]
    },
    "source": [
-    "<button onclick=\"toggleDisplay('myDIV2')\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
+    "<!-- <button onclick=\"toggleDisplay('myDIV2')\">Was passiert hier oben? (Schritt-für-Schritt-Erklärung)</button>\n",
     "\n",
-    "<div id=\"myDIV2\" style=\"display:none\"> \n",
+    "<div id=\"myDIV2\" style=\"display:none\"> -->\n",
     "\n",
     "### Was passiert in diesem Codeblock oben? – Schritt für Schritt\n",
     "\n",
@@ -502,7 +502,7 @@
     "HTML-Tabelle parst**, die Detailseiten herunterlädt, Text extrahiert und alles\n",
     "sauber für weitere Analysen ablegt.\n",
     "\n",
-    "</div> \n"
+    "<!-- </div> -->\n"
    ]
   },
   {
