--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -159,9 +159,7 @@
     "slideshow": {
      "slide_type": ""
     },
-    "tags": [
-     "skip-execution"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
