add metadata export after mass scraping

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -675,6 +675,39 @@
     "df_all = crawl_all_pages(pages=None)   # None → auto-detect\n",
     "df_all.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a8a3d76-7955-4e5a-9749-3c6d8ff42bbe",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "### Export von Metadaten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb429b69-1a01-4a91-8764-f0e32839b234",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "skip-execution"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "metadata_path = DATA_DIR / \"metadata_updated.csv\"\n",
+    "df_all.to_csv()"
+   ]
   }
  ],
  "metadata": {
