add feinlernziel mass scraping

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -3,9 +3,32 @@
   {
    "cell_type": "markdown",
    "id": "e169cfbb-5409-4bc0-82db-413343b58e32",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# 🚀 Massenscraping von Pressemitteilungen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f17d594-10da-402b-83af-5bacddd33b7d",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "<div class=\"alert alert-block alert-info\"> <b> 🔔 Feinlernziel(e) dieses Kapitels</b>\n",
+    "</br>\n",
+    "Die Lernenden können mit Hilfe eines Jupyter Notebooks Python-Code zur Extraktion des Website-Texts ausführen.</br>\n",
+    "</div>"
    ]
   },
   {
