add lxml support

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "# 🚀 Install libraries \n",
-    "!pip install requests tqdm "
+    "!pip install requests tqdm lxml"
    ]
   },
   {
