--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "4b5c5d7a-f727-4385-8c30-49347b73d692",
    "metadata": {
     "editable": true,
@@ -101,7 +101,13 @@
   {
    "cell_type": "markdown",
    "id": "2a371973-de38-4439-8878-86b31954abea",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Abruf und Analyse der Suchseite für Pressemitteilungen"
    ]
@@ -109,7 +115,13 @@
   {
    "cell_type": "markdown",
    "id": "6b470b17-54f4-4ae5-8d97-581780c8b86b",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Im Kapitel ['Aufbau des Forschungskorpus'](../corpus_collection/corpus-collection_building-our-corpus.html#aufbau-des-forschungskorpus) haben wir die Auswahl- und Filterprozesse für unser Korpus von Pressemitteilungen beschrieben. Nun geht es darum, das Korpus mithilfe von Scraping-Tools und HTML-Kenntnissen zu extrahieren. <!-- In the chapter ['Aufbau des Forschungskorpus'](../corpus_collection/corpus-collection_building-our-corpus.html#aufbau-des-forschungskorpus) we have outlined the selection & filtering process for our corpus of press releases. Now it is time to imlement scraping of tha corpus using scraping tools and knowledge of HTML. -->\n",
     "\n",
@@ -143,7 +155,13 @@
   {
    "cell_type": "markdown",
    "id": "cd62da74-4319-486d-adee-9058dbc9f495",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Suchergebnisse scrapen und Pressemitteilungen extrahieren (auf einer Seite): "
    ]
