skip multiple page parsing while deploying the book

--- a/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
+++ b/corpus_building/corpus_building_mass_scraping_press-releases.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f973641b-67cf-4a7c-8f28-a51b92e03e07",
    "metadata": {
     "editable": true,
@@ -183,7 +183,7 @@
     "FIRST_OUTPUT_PAGE = (\n",
     "    \"https://www.berlin.de/presse/pressemitteilungen/index/search/?searchtext=&boolean=0&startdate=&enddate=&alle-senatsverwaltungen=on&institutions%5B%5D=Presse-+und+Informationsamt+des+Landes+Berlin&institutions%5B%5D=Senatsverwaltung+für+Bildung%2C+Jugend+und+Familie&institutions%5B%5D=Senatsverwaltung+für+Finanzen&institutions%5B%5D=Senatsverwaltung+für+Inneres+und+Sport&institutions%5B%5D=Senatsverwaltung+für+Arbeit%2C+Soziales%2C+Gleichstellung%2C+Integration%2C+Vielfalt+und+Antidiskriminierung&institutions%5B%5D=Senatsverwaltung+für+Justiz+und+Verbraucherschutz&institutions%5B%5D=Senatsverwaltung+für+Kultur+und+Gesellschaftlichen+Zusammenhalt&institutions%5B%5D=Senatsverwaltung+für+Stadtentwicklung%2C+Bauen+und+Wohnen&institutions%5B%5D=Senatsverwaltung+für+Mobilität%2C+Verkehr%2C+Klimaschutz+und+Umwelt&institutions%5B%5D=Senatsverwaltung+für+Wirtschaft%2C+Energie+und+Betriebe&institutions%5B%5D=Senatsverwaltung+für+Wissenschaft%2C+Gesundheit+und+Pflege&alle-bezirksamt=on&institutions%5B%5D=Bezirksamt+Charlottenburg-Wilmersdorf&institutions%5B%5D=Bezirksamt+Friedrichshain-Kreuzberg&institutions%5B%5D=Bezirksamt+Lichtenberg&institutions%5B%5D=Bezirksamt+Marzahn-Hellersdorf&institutions%5B%5D=Bezirksamt+Mitte&institutions%5B%5D=Bezirksamt+Neukölln&institutions%5B%5D=Bezirksamt+Pankow&institutions%5B%5D=Bezirksamt+Reinickendorf&institutions%5B%5D=Bezirksamt+Spandau&institutions%5B%5D=Bezirksamt+Steglitz-Zehlendorf&institutions%5B%5D=Bezirksamt+Tempelhof-Schöneberg&institutions%5B%5D=Bezirksamt+Treptow-Köpenick&alle-landesbeauftragte=on&institutions%5B%5D=Beauftragte+des+Senats+für+Integration+und+Migration&institutions%5B%5D=Beauftragter+zur+Aufarbeitung+der+SED-Diktatur&institutions%5B%5D=Bürger-+und+Polizeibeauftragter+des+Landes+Berlin&institutions%5B%5D=Pflegebeauftragte+des+Landes+Berlin&institutions%5B%5D=Landestierschutzbeauftragte&institutions%5B%5D=Landeswahlleitung&bt=\"\n",
     ") \n",
-    "DATA_DIR   = pathlib.Path(\"../data\")         \n",
+    "DATA_DIR   = pathlib.Path(\"../data-updated\")         \n",
     "HTML_DIR   = DATA_DIR / \"html\"\n",
     "TXT_DIR    = DATA_DIR / \"txt\"\n",
     "HTML_DIR.mkdir(parents=True, exist_ok=True)\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "6d83d1d3-86af-41db-a8db-b14b270d17bb",
    "metadata": {
     "editable": true,
@@ -282,18 +282,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "577fdf92-4f28-4a8a-8dfa-5c607098d6a9",
    "metadata": {
     "editable": true,
     "slideshow": {
      "slide_type": ""
     },
-    "tags": [
-     "skip-execution"
-    ]
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 10 rows on the page.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100%|█████████████████████████████████████| 10/10 [00:04<00:00,  2.06it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>ressort</th>\n",
+       "      <th>title</th>\n",
+       "      <th>pr_url</th>\n",
+       "      <th>filename_html</th>\n",
+       "      <th>filename_txt</th>\n",
+       "      <th>n_tokens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Bezirksamt Reinickendorf</td>\n",
+       "      <td>Reinickendorf gedenkt der Opfer des Volksaufst...</td>\n",
+       "      <td>https://www.berlin.de/ba-reinickendorf/aktuell...</td>\n",
+       "      <td>1570899.html</td>\n",
+       "      <td>1570899.txt</td>\n",
+       "      <td>729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Bezirksamt Charlottenburg-Wilmersdorf</td>\n",
+       "      <td>Starker Befall mit Eichenprozessionsspinnern i...</td>\n",
+       "      <td>https://www.berlin.de/ba-charlottenburg-wilmer...</td>\n",
+       "      <td>1570886.html</td>\n",
+       "      <td>1570886.txt</td>\n",
+       "      <td>1313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Bezirksamt Marzahn-Hellersdorf</td>\n",
+       "      <td>Sichere Schulwege digital: Das neue „Schulwegp...</td>\n",
+       "      <td>https://www.berlin.de/ba-marzahn-hellersdorf/a...</td>\n",
+       "      <td>1570882.html</td>\n",
+       "      <td>1570882.txt</td>\n",
+       "      <td>880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Bezirksamt Spandau</td>\n",
+       "      <td>Modernisiertes Spielfeld am Cosmarweg stärkt B...</td>\n",
+       "      <td>https://www.berlin.de/ba-spandau/aktuelles/pre...</td>\n",
+       "      <td>1570883.html</td>\n",
+       "      <td>1570883.txt</td>\n",
+       "      <td>786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.06.2025</td>\n",
+       "      <td>Bezirksamt Marzahn-Hellersdorf</td>\n",
+       "      <td>Halt, Beratung und konkrete Hilfe für junge Me...</td>\n",
+       "      <td>https://www.berlin.de/ba-marzahn-hellersdorf/a...</td>\n",
+       "      <td>1570857.html</td>\n",
+       "      <td>1570857.txt</td>\n",
+       "      <td>890</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date                                ressort  \\\n",
+       "0  17.06.2025               Bezirksamt Reinickendorf   \n",
+       "1  17.06.2025  Bezirksamt Charlottenburg-Wilmersdorf   \n",
+       "2  17.06.2025         Bezirksamt Marzahn-Hellersdorf   \n",
+       "3  17.06.2025                     Bezirksamt Spandau   \n",
+       "4  17.06.2025         Bezirksamt Marzahn-Hellersdorf   \n",
+       "\n",
+       "                                               title  \\\n",
+       "0  Reinickendorf gedenkt der Opfer des Volksaufst...   \n",
+       "1  Starker Befall mit Eichenprozessionsspinnern i...   \n",
+       "2  Sichere Schulwege digital: Das neue „Schulwegp...   \n",
+       "3  Modernisiertes Spielfeld am Cosmarweg stärkt B...   \n",
+       "4  Halt, Beratung und konkrete Hilfe für junge Me...   \n",
+       "\n",
+       "                                              pr_url filename_html  \\\n",
+       "0  https://www.berlin.de/ba-reinickendorf/aktuell...  1570899.html   \n",
+       "1  https://www.berlin.de/ba-charlottenburg-wilmer...  1570886.html   \n",
+       "2  https://www.berlin.de/ba-marzahn-hellersdorf/a...  1570882.html   \n",
+       "3  https://www.berlin.de/ba-spandau/aktuelles/pre...  1570883.html   \n",
+       "4  https://www.berlin.de/ba-marzahn-hellersdorf/a...  1570857.html   \n",
+       "\n",
+       "  filename_txt  n_tokens  \n",
+       "0  1570899.txt       729  \n",
+       "1  1570886.txt      1313  \n",
+       "2  1570882.txt       880  \n",
+       "3  1570883.txt       786  \n",
+       "4  1570857.txt       890  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# -- step 1: parse ONE results page -----------------------------------------\n",
     "search_soup = get_soup(FIRST_OUTPUT_PAGE)\n",
@@ -687,7 +819,9 @@
     "slideshow": {
      "slide_type": ""
     },
-    "tags": []
+    "tags": [
+     "skip-execution"
+    ]
    },
    "outputs": [],
    "source": [
